changed logic to fix error 500 while downloading excel file